<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Player</string>
    
    <!-- Main Activity -->
    <string name="my_music">My Music</string>
    <string name="now_playing">Now Playing</string>
    <string name="no_songs_found">No songs found</string>
    <string name="loading_music">Loading music…</string>
    
    <!-- Player Controls -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    
    <!-- Time -->
    <string name="time_format">%02d:%02d</string>
    <string name="unknown_time">--:--</string>
    
    <!-- Song Info -->
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_title">Unknown Title</string>
    
    <!-- Permissions -->
    <string name="permission_needed">Storage permission needed to access music files</string>
    <string name="grant_permission">Grant Permission</string>
    
    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    
    <!-- Notification -->
    <string name="notification_channel_name">Music Playback</string>
    <string name="notification_channel_description">Controls for music playback</string>
    
    <!-- Playback -->
    <string name="shuffle_on">Shuffle: ON</string>
    <string name="shuffle_off">Shuffle: OFF</string>
    <string name="repeat_off">Repeat: OFF</string>
    <string name="repeat_one">Repeat: ONE</string>
    <string name="repeat_all">Repeat: ALL</string>
</resources>